Fix visualization server image

--- a/manifests/opendatahub/base/deployments/ml-pipeline-visualizationserver.yaml
+++ b/manifests/opendatahub/base/deployments/ml-pipeline-visualizationserver.yaml
@@ -1,6 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    alpha.image.policy.openshift.io/resolve-names: 'visualization-server:1.3.1'
+    image.openshift.io/triggers: >-
+      [{"from":{"kind":"ImageStreamTag","name":"visualization-server:1.3.1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ml-pipeline-visualizationserver\")].image"}]
   labels:
     app: ml-pipeline-visualizationserver
     application-crd-id: kubeflow-pipelines
@@ -18,9 +22,26 @@ spec:
         app: ml-pipeline-visualizationserver
         application-crd-id: kubeflow-pipelines
     spec:
+      initContainers:
+        - name: image-checker
+          image: 'quay.io/modh/odh-deployer:v1.15.0-10-rhods'
+          command:
+            - sh
+            - '-c'
+            - |
+              while :
+              do
+                TEST=$(oc get istag visualization-server:1.3.1 | wc -l)
+
+                if [[ $TEST -gt 0 ]]; then
+                  break
+                fi
+                echo "Image is not built yet, please wait..."
+                sleep 30
+              done
       containers:
-        - image: visualization-server
-          imagePullPolicy: IfNotPresent
+        - image: visualization-server:1.3.1
+          imagePullPolicy: Always
           name: ml-pipeline-visualizationserver
           ports:
             - containerPort: 8888
