Rename manifests to Data Science Pipelines

--- a/manifests/opendatahub/base/deployments/ds-pipeline-persistenceagent.yaml
+++ b/manifests/opendatahub/base/deployments/ds-pipeline-persistenceagent.yaml
@@ -30,6 +30,7 @@ spec:
           command:
             - persistence_agent
             - "--logtostderr=true"
+            - "--namespace=$(namespace)"
             - "--ttlSecondsAfterWorkflowFinish=86400"
             - "--numWorker=2"
             - "--mlPipelineAPIServerName=ds-pipeline"
