--- a/manifests/opendatahub/base/kustomization.yaml
+++ b/manifests/opendatahub/base/kustomization.yaml
@@ -3,38 +3,47 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  # Configmaps
+  - ./configmaps/ds-pipeline-config.yaml
+  - ./configmaps/pipeline-install-config.yaml
+
   # CustomResourceDefinitions
+  - ./customresourcedefinitions/viewers.yaml
   - ./customresourcedefinitions/scheduledworkflows.yaml
 
   # Deployments
   - ./deployments/ds-pipeline-persistenceagent.yaml
   - ./deployments/ds-pipeline-scheduledworkflow.yaml
+  - ./deployments/ds-pipeline-viewer-crd.yaml
+  - ./deployments/ds-pipeline-visualizationserver.yaml
   - ./deployments/ds-pipeline.yaml
 
   # Rolebindings
+  - ./rolebindings/ds-pipeline-persistenceagent-binding.yaml
   - ./rolebindings/ds-pipeline-scheduledworkflow-binding.yaml
+  - ./rolebindings/ds-pipeline-viewer-crd-binding.yaml
   - ./rolebindings/ds-pipeline.yaml
   - ./rolebindings/pipeline-runner-binding.yaml
 
   # Roles
+  - ./roles/ds-pipeline-persistenceagent-role.yaml
   - ./roles/ds-pipeline-scheduledworkflow-role.yaml
+  - ./roles/ds-pipeline-viewer-controller-role.yaml
   - ./roles/ds-pipeline.yaml
   - ./roles/pipeline-runner.yaml
-
-  # ClusterRoleBindings
-  - ./clusterrolebindings/ds-pipeline-persistenceagent-clusterrolebinding.yaml
-
-  # ClusterRoles
-  - ./clusterroles/ds-pipeline-persistenceagent-clusterrole.yaml
 
   # ServiceAccounts
   - ./serviceaccounts/ds-pipeline-container-builder.yaml
   - ./serviceaccounts/ds-pipeline-persistenceagent.yaml
   - ./serviceaccounts/ds-pipeline-scheduledworkflow.yaml
+  - ./serviceaccounts/ds-pipeline-viewer-crd-service-account.yaml
+  - ./serviceaccounts/ds-pipeline-viewer.yaml
+  - ./serviceaccounts/ds-pipeline-visualizationserver.yaml
   - ./serviceaccounts/ds-pipeline.yaml
   - ./serviceaccounts/pipeline-runner.yaml
 
   # Services
+  - ./services/ds-pipeline-visualizationserver.yaml
   - ./services/ds-pipeline.yaml
 
   # Monitoring
@@ -48,6 +57,13 @@ configMapGenerator:
     envs:
       - params.env
 vars:
+  - name: namespace
+    objref:
+      kind: ConfigMap
+      name: ds-pipeline-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: metadata.namespace
   - name: artifact_secret_name
     objref:
       name: ds-pipeline-params-config
@@ -83,17 +99,22 @@ vars:
       apiVersion: v1
     fieldref:
       fieldpath: data.ds_pipelines_ui_configuration
-
 configurations:
   - params.yaml
 
 images:
   - name: persistenceagent
-    newName: quay.io/modh/odh-ml-pipelines-persistenceagent-container
-    newTag: v1.18.0-8
+    newName: quay.io/internaldatahub/persistenceagent
+    newTag: 1.1.0
   - name: scheduledworkflow
-    newName: quay.io/modh/odh-ml-pipelines-scheduledworkflow-container
-    newTag: v1.18.0-8
+    newName: quay.io/internaldatahub/scheduledworkflow
+    newTag: 1.1.0
+  - name: viewer-crd-controller
+    newName: gcr.io/ml-pipeline/viewer-crd-controller
+    newTag: 1.7.0
+  - name: visualization-server
+    newName: gcr.io/ml-pipeline/visualization-server
+    newTag: 1.7.0
   - name: api-server
-    newName: quay.io/modh/odh-ml-pipelines-api-server-container
-    newTag: v1.18.0-8
+    newName: quay.io/internaldatahub/api-server
+    newTag: 1.1.0
