Rename Visualization Server overlay

--- a/manifests/opendatahub/overlays/component-visualization-server/kustomization.yaml
+++ b/manifests/opendatahub/overlays/component-visualization-server/kustomization.yaml
@@ -3,32 +3,26 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  # Build Configs
-  - ./buildconfigs/visualization-server.yaml
-
   # CustomResourceDefinitions
-  - ./customresourcedefinitions/viewers.yaml
+  - ./viewers.yaml
 
   # Deployments
-  - ./deployments/ds-pipeline-viewer-crd.yaml
-  - ./deployments/ds-pipeline-visualizationserver.yaml
+  - ./ds-pipeline-viewer-crd-deployment.yaml
+  - ./ds-pipeline-visualizationserver-deployment.yaml
 
   # Rolebindings
-  - ./rolebindings/ds-pipeline-viewer-crd-binding.yaml
+  - ./ds-pipeline-viewer-crd-binding.yaml
 
   # Roles
-  - ./roles/ds-pipeline-viewer-controller-role.yaml
+  - ./ds-pipeline-viewer-controller-role.yaml
 
   # ServiceAccounts
-  - ./serviceaccounts/ds-pipeline-viewer-crd-service-account.yaml
-  - ./serviceaccounts/ds-pipeline-viewer.yaml
-  - ./serviceaccounts/ds-pipeline-visualizationserver.yaml
-
-  # Image Streams
-  - ./imagestreams/visualization-server.yaml
+  - ./ds-pipeline-viewer-crd-sa.yaml
+  - ./ds-pipeline-viewer-sa.yaml
+  - ./ds-pipeline-visualizationserver-sa.yaml
 
   # Services
-  - ./services/ds-pipeline-visualizationserver.yaml
+  - ./ds-pipeline-visualizationserver-svc.yaml
 
 images:
   - name: viewer-crd-controller
