Add org mention to tag release workflow comment.
Signed-off-by: Humair Khan <humair88@hotmail.com>

--- a/.github/workflows/tag-release-quay.yml
+++ b/.github/workflows/tag-release-quay.yml
@@ -1,6 +1,6 @@
 name: Image push per Github Tag
 
-# This GitHub action activates whenever a new tag is created on the repo under opendatahub-io
+# This GitHub action activates whenever a new tag is created on the repo under opendatahub-io org
 # and creates a copy of the image of the associated commit hash with the
 # appropriate tag name.
 
