--- a/.github/workflows/tag-release-quay.yml
+++ b/.github/workflows/tag-release-quay.yml
@@ -11,16 +11,16 @@ on:
       - '*'
   workflow_dispatch:
 env:
-  IMAGE_SERVER: ds-pipelines-api-server
-  IMAGE_UI: ds-pipelines-frontend
-  IMAGE_CACHE: ds-pipelines-cacheserver
-  IMAGE_PA: ds-pipelines-persistenceagent
-  IMAGE_SWF: ds-pipelines-scheduledworkflow
-  IMAGE_VC: ds-pipelines-viewercontroller
-  IMAGE_ARTIFACT: ds-pipelines-artifact-manager
-  IMAGE_MLMD_WRITER: ds-pipelines-metadata-writer
-  IMAGE_MLMD_ENVOY: ds-pipelines-metadata-envoy
-  IMAGE_MLMD_GRPC: ds-pipelines-metadata-grpc
+  IMAGE_SERVER: quay.io/opendatahub/ds-pipelines-api-server
+  IMAGE_UI: quay.io/opendatahub/ds-pipelines-frontend
+  IMAGE_CACHE: quay.io/opendatahub/ds-pipelines-cacheserver
+  IMAGE_PA: quay.io/opendatahub/ds-pipelines-persistenceagent
+  IMAGE_SWF: quay.io/opendatahub/ds-pipelines-scheduledworkflow
+  IMAGE_VC: quay.io/opendatahub/ds-pipelines-viewercontroller
+  IMAGE_ARTIFACT: quay.io/opendatahub/ds-pipelines-artifact-manager
+  IMAGE_MLMD_WRITER: quay.io/opendatahub/ds-pipelines-metadata-writer
+  IMAGE_MLMD_ENVOY: quay.io/opendatahub/ds-pipelines-metadata-envoy
+  IMAGE_MLMD_GRPC: quay.io/opendatahub/ds-pipelines-metadata-grpc
 jobs:
   copy-tag-to-quay:
     runs-on: ubuntu-latest
