Dont trigger Image Builder on PR GHAction if only documentation updated

--- a/.github/workflows/build-prs-trigger.yaml
+++ b/.github/workflows/build-prs-trigger.yaml
@@ -1,6 +1,11 @@
 name: Trigger build images for PRs
 on:
   pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - 'guides/**'
+      - 'images/**'
+      - '**/README.md'
     types:
       - opened
       - reopened
