--- a/backend/artifact_manager/requirements-build.in
+++ b/backend/artifact_manager/requirements-build.in
@@ -1,10 +1,12 @@
-Cython
-flit_core >=3.4,<4
-packaging>=20.0
-pyparsing!=3.0.5,>=2.0.2
-setuptools
-setuptools>=40.8.0
-setuptools_scm
+calver==2022.6.26
+Cython==0.29.37
+flit_core >=3.9,<4
+hatchling==1.24.2
+packaging>=24.0
+pathspec==0.12.1
+pluggy==1.5.0
+setuptools-scm==7.1.0
 tomli>=1.0.0
-typing-extensions
-wheel
+trove-classifiers==2024.5.22
+typing-extensions==4.12.1
+wheel==0.43.0
