--- a/backend/Dockerfile.scheduledworkflow
+++ b/backend/Dockerfile.scheduledworkflow
@@ -12,13 +12,10 @@ ARG SOURCE_CODE
 ## Switch to root as required for some operations
 USER root
 
-RUN dnf upgrade -y && \
-    dnf install -y bash \
-                   git \
-                   openssh \
-                   gcc && \
-    dnf groupinstall -y "Development Tools" && \
-    dnf clean all && rm -rf /var/cache/yum
+#RUN dnf upgrade -y && \
+#dnf install -y bash git openssh gcc
+#dnf groupinstall -y "Development Tools" && \
+#dnf clean all && rm -rf /var/cache/yum
 
 
 COPY ${SOURCE_CODE}/go.mod ./
