--- a/.tekton/artifact-b3-push.yaml
+++ b/.tekton/artifact-b3-push.yaml
@@ -28,7 +28,7 @@ spec:
   - name: path-context
     value: .
   - name: prefetch-input
-    value: '{"type": "pip", "path": ".", "requirements_files": ["requirements.txt", "requirements.in", "requirements-build.in", "requirements-build.txt"]}'
+    value: '{"type": "pip", "path": "backend/artifact_manager", "requirements_files": ["requirements.txt", "requirements.in", "requirements-build.in", "requirements-build.txt"]}'
   pipelineSpec:
     finally:
     - name: show-sbom
