--- a/backend/Dockerfile.cachekonflux
+++ b/backend/Dockerfile.cachekonflux
@@ -18,6 +18,7 @@ RUN dnf upgrade -y && \
                    git \
                    openssh \
                    gcc && \
+    dnf config-manager --set-enabled codeready-builder-for-rhel-8-$(arch)-rpms && \
     dnf groupinstall -y "Development Tools" && \
     dnf clean all && rm -rf /var/cache/yum/
 
