--- a/backend/Dockerfile.cachekonflux
+++ b/backend/Dockerfile.cachekonflux
@@ -18,8 +18,12 @@ RUN dnf upgrade -y && \
                    git \
                    openssh \
                    gcc && \
-    dnf config-manager --set-enabled codeready-builder-for-rhel-8-$(arch)-rpms && \
-    dnf groupinstall -y "Development Tools" && \
+                   make \
+                   automake \
+                   autoconf \
+                   gcc-c++ \
+                   kernel-devel && \
+    #dnf groupinstall -y "Development Tools" && \
     dnf clean all && rm -rf /var/cache/yum/
 
 COPY ${SOURCE_CODE}/go.mod ./
