--- a/.tekton/odh-ml-pipelines-artifact-manager-213-pull-request.yaml
+++ b/.tekton/odh-ml-pipelines-artifact-manager-213-pull-request.yaml
@@ -30,6 +30,8 @@ spec:
     value: ./backend/artifact_manager/Dockerfile
   - name: path-context
     value: .
+  - name: prefetch-input
+    value: '{"type": "pip", "path": "backend/artifact_manager", "requirements_files": ["requirements.txt", "requirements.in", "requirements-build.in", "requirements-build.txt"]}'
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -96,7 +98,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
