--- a/backend/Dockerfile.scheduledworkflow
+++ b/backend/Dockerfile.scheduledworkflow
@@ -35,8 +35,7 @@ WORKDIR /bin
 COPY --from=builder /bin/controller /bin/controller
 RUN chmod +x /bin/controller
 
-RUN microdnf makecache && \
-     microdnf install -y tzdata.noarch
+#RUN microdnf makecache microdnf install -y tzdata.noarch
 
 ENV NAMESPACE ""
 
