--- a/.tekton/odh-ml-pipelines-api-server-v2-13-push.yaml
+++ b/.tekton/odh-ml-pipelines-api-server-v2-13-push.yaml
@@ -22,7 +22,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/rhoai-tenant/rhoai-v2-13/odh-ml-pipelines-api-server-v2-13:{{revision}}
+    value: quay.io/rhoai/odh-ml-pipelines-api-server-v2-rhel8:{{target_branch}}
   - name: dockerfile
     value: backend/Dockerfile
   - name: path-context
@@ -417,6 +417,9 @@ spec:
       params:
       - name: IMAGE
         value: $(tasks.build-image-index.results.IMAGE_URL)
+      - name: ADDITIONAL_TAGS
+        value: 
+          - '{{target_branch}}-{{revision}}'
       runAfter:
       - build-image-index
       taskRef:
