--- a/backend/Dockerfile.scheduledworkflow
+++ b/backend/Dockerfile.scheduledworkflow
@@ -12,12 +12,11 @@ ARG SOURCE_CODE
 ## Switch to root as required for some operations
 USER root
 
-RUN dnf upgrade -y && \
-    dnf install -y bash \
+RUN dnf install -y bash \
                    git \
                    openssh \
                    gcc && \
-    dnf groupinstall -y "Development Tools" && \
+    #dnf groupinstall -y "Development Tools" && \
     dnf clean all && rm -rf /var/cache/yum
 
 
