--- a/backend/Dockerfile.cachekonflux
+++ b/backend/Dockerfile.cachekonflux
@@ -18,7 +18,7 @@ RUN dnf upgrade -y && \
                    git \
                    openssh \
                    gcc && \
-    dnf groupinstall -y "Development Tools" && \
+    #dnf groupinstall -y "Development Tools" && \
     dnf clean all && rm -rf /var/cache/yum/
 
 COPY ${SOURCE_CODE}/go.mod ./
