--- a/backend/Dockerfile.cachekonflux
+++ b/backend/Dockerfile.cachekonflux
@@ -13,13 +13,10 @@ ARG CI_CONTAINER_VERSION
 ## Switch to root as required for some operations
 USER root
 
-RUN dnf upgrade -y && \
-    dnf install -y bash \
-                   git \
-                   openssh \
-                   gcc && \
+#RUN dnf upgrade -y && \
+   # dnf install -y bash  git openssh  gcc
     #dnf groupinstall -y "Development Tools" && \
-    dnf clean all && rm -rf /var/cache/yum/
+   # dnf clean all && rm -rf /var/cache/yum/
 
 COPY ${SOURCE_CODE}/go.mod ./
 COPY ${SOURCE_CODE}/go.sum ./
