--- a/rpms.in.yaml
+++ b/rpms.in.yaml
@@ -2,6 +2,12 @@ contentOrigin:
   repofiles:
     - ubi.repo
 packages:
+  - git
+  - bash
+  - openssh
+  - gcc
+  - tzdata
   - cmake
   - clang
   - openssl
+  - ca-certificates
